versions/0.7/content/README.ru.md
# versions/0.7/content/ — исходники спецификации по секциям

**Languages:** [English](README.md) · **Русский** · [简体中文](README.zh.md)

## Что это за директория

Эта директория — **источник истины по секциям** для
`versions/0.7/spec.md`, `versions/0.7/spec.ru.md` и
`versions/0.7/spec.zh.md`.

- Три файла `.md` в `versions/0.7/` — **сгенерированные артефакты**. Они
  остаются в репозитории, чтобы спецификацию можно было читать на GitHub
  напрямую, но их **нельзя редактировать вручную**: ручная правка будет
  перезаписана следующей сборкой и уронит
  `node scripts/build_spec.mjs --check`.
- **Юниты контента** в этой директории (одна папка на секцию) — то, что
  редактируют люди.
- `scripts/check_translation_parity.py` продолжает прогоняться по
  сгенерированным файлам `.md` как последующий структурный гейт;
  `node scripts/build_spec.mjs --check` — гейт точности байт-в-байт.

## Текущий состав

103 юнита: 1 `frontmatter/`, 97 нумерованных `sec-<number>/` (`sec-1`,
`sec-3.1`, `sec-5.3.3`, `sec-10.7`) и 5 именованных `named-<slug>/`
(`named-abstract`, `named-appendix-a` .. `named-appendix-d`). Плюс:

- `scripts/locks/section-inventory.0.7.lock.json` — независимый
  версионированный упорядоченный inventory. Builder требует его при обычном
  CLI-запуске и отвергает расхождение состава или порядка с manifest.
- `README.source.js` — единый source object `{ en, ru, zh }` для трёх README
  этой директории. Builder статически проверяет его и генерирует
  `README.md`, `README.ru.md` и `README.zh.md`.
- `release.js` — единственное объявление релиза: `version` + `released`
  (см. ниже). У него та же каноническая форма `export default` + JSON, что
  и у `meta.js`, и это единственное место, где записаны текущие версия и
  дата релиза.
- `manifest.js` — упорядоченный список юнитов (см. ниже).
- `package.json` — `{"type":"module"}`. Исторически: был нужен, пока
  `build_spec.mjs` динамически импортировал `meta.js`/`body-*.md` как
  ES-модули. После закрытия closed-world (ничего под `content/` больше не
  исполняется — `manifest.js` и `meta.js` читаются как UTF-8-текст и
  разбираются через `JSON.parse`, `body-*.md` статически сканируется и
  декодируется), файл функционально больше не обязателен, но оставлен на
  месте и по-прежнему разрешён на верхнем уровне.

## Соглашение об именовании папок

- **Нумерованные секции**: `sec-<number>`, где `<number>` — точный номер
  секции, как он стоит в заголовке: `sec-1`, `sec-5.3.3`.
- **Ненумерованные секции** (заголовки уровня >= 2 без номера):
  `named-<slug>`. Слаг выводится **только из английского текста
  заголовка** (то есть не зависит от языка):
  1. отсечь на первой `.`, если есть ("Appendix A. Changes" ->
     "Appendix A");
  2. нижний регистр;
  3. заменить каждую серию символов вне `[a-z0-9]` одним `-`;
  4. обрезать `-` по краям.

  Примеры: "Abstract" -> `abstract`; "Appendix D. Migration from 0.6.x" ->
  `appendix-d`.
- **`frontmatter/`** — специальный юнит, хранящий всё до первого
  заголовка секции: строку заголовка h1, блок полей `**Languages:**` /
  `**Version:**` / `**Date:**` и — только в строках `ru`/`zh` тела —
  информационную цитату-дисклеймер о переводе. Заголовок h1 лежит
  **внутри** содержимого тела frontmatter, дословно; у самого
  `frontmatter` своего заголовка нет.

## Состав юнита

Каждая директория юнита содержит ровно: `meta.js`, `body-1.md`, ...,
`body-N.md` (N >= 1). Файлы `.md` под `content/` — только три корневых
README (`README.md`, `README.ru.md`, `README.zh.md`); внутри директорий
юнитов Markdown запрещён полностью.

### `meta.js`

Каждый `meta.js` использует `export default { ... }` (в стиле JSON). Три
формы, дословно:

```js
// frontmatter/meta.js
export default {
  "kind": "frontmatter",
  "number": null,
  "level": null,
  "title": null,
  "bodyParts": 1
}

// sec-3.1/meta.js
export default {
  "kind": "numbered",
  "number": "3.1",
  "sep": " ",
  "level": 3,
  "title": {
    "en": "...",
    "ru": "...",
    "zh": "..."
  },
  "bodyParts": 1
}

// named-appendix-a/meta.js
export default {
  "kind": "named",
  "number": null,
  "level": 2,
  "title": {
    "en": "...",
    "ru": "...",
    "zh": "..."
  },
  "bodyParts": 1
}
```

Файл целиком должен быть байт-в-байт идентичен `export default `, за которым
следует значение, сериализованное как строгий JSON
(`JSON.stringify(value, null, 2)`), плюс один завершающий перевод строки:
один ключ на строку, отступ в 2 пробела, переводы строк LF, без завершающей
точки с запятой. Payload после `export default ` разбирается как JSON
(`JSON.parse`), а **не** вычисляется как литерал объекта JavaScript —
завершающие запятые, комментарии, ключи без кавычек и точки с запятой там
никогда не допустимы (в отличие от `body-<k>.md`, который является Markdown и не содержит кода — прежняя формулировка про JS-исходник устарела; см.
исходником на JS, лишь узко ограниченным). Дубликаты ключей тоже
отвергаются: сборщик сравнивает файл байт-в-байт с канонической
сериализацией выше, и повторный ключ делает файл отличным от неё.

Значения полей:

- `kind` — `frontmatter`, `numbered` или `named`.
- `number` — номер секции строкой (`"3.1"`), `null` для ненумерованных
  юнитов и frontmatter.
- `level` — количество `#` в заголовке (`##` = 2). `null` для
  frontmatter.
- `title` — текст заголовка на каждом языке, **без** ведущего номера и
  разделителя; генератор пристыковывает их сам.
- `sep` — разделитель, реально использованный между номером и
  заголовком. **Зачем он существует:** соглашение о заголовках спеки
  намеренно смешивает `## 1. Introduction` (нумерованные секции
  верхнего уровня, точка + пробел) с `### 3.1 Character Set` (более
  глубокие подсекции, только пробел). Генератор должен воспроизвести
  каждый заголовок байт-в-байт, поэтому фактический разделитель
  записывается на каждый юнит. Легальны только `". "` и `" "`.
  Скрипт извлечения требует, чтобы все три языка использовали один и
  тот же `sep` для юнита.
- `bodyParts` — целое число файлов `body-*.md` юнита (N в
  `body-1.md` .. `body-N.md`). Всегда >= 1. Есть у ВСЕХ юнитов, включая
  `frontmatter`, и всегда приписывается **последним**. Сборщик принимает
  не более 4096 частей на юнит и отвергает большие значения до чтения файлов
  тела.

### `body-<k>.md`

Каждый `body-<k>.md` — это Markdown, несущий по одному блоку на язык;
каждый блок вводится собственной строкой-разделителем:

```text
 >>>>> lang=en
 ...raw text chunk k for English...
 >>>>> lang=ru
 ...
 >>>>> lang=zh
 ...
```

Пример выше намеренно сдвинут на один пробел: разделитель распознаётся
только в самом начале строки, поэтому сдвинутый — обычное содержимое.
Это же и запасной выход, если телу когда-нибудь понадобится процитировать
разделитель буквально.

Блок идёт со строки после своего разделителя до строки перед следующим
разделителем, а последний — до конца файла. Поэтому блок сохраняет
собственный завершающий перевод строки, а кусок, кончающийся пустой
строкой, сохраняет и её.

**Экранирования нет.** Содержимое хранится как есть: забор кода записан
забором кода, обратная косая — это обратная косая, `${` — два обычных
символа. Ради этого формат и сделан Markdown, а не строковым литералом:
спецификация полна примеров в заборах, и каждый из них раньше писался
экранированными backticks.

Единственное, чего не может содержать содержимое, — строку, начинающуюся
с `>>>>> lang=`. Это написание выбрано потому, что оно не является
разметкой, которую использует сам документ: маркер заголовка Markdown
конкурировал бы с прозой, которую разделяет. Лишний или повторный
разделитель — ошибка сборки, а не молчаливая граница блока.

Сам формат не называет языков и не фиксирует порядок — декодированный
результат является отображением. Он требует лишь, чтобы язык встречался
в файле не более одного раза. А то, что все исходники несут одинаковый
набор и что этот набор — ровно `en`, `ru`, `zh`, является собственным
правилом этой спецификации поверх формата.

Полный текст тела юнита на языке — это **конкатенация** кусков 1..N по
порядку, **без разделителя** между кусками.

**Релизные токены.** Любое тело юнита может содержать ASCII-токены
`@@VERSION@@` и `@@DATE@@`; здесь это обычный текст, поэтому
экранирование не нужно. При сборке Builder подставляет вместо них значения
`version` / `released` из `release.js` на всех языках. Токен,
прорвавшийся в spec-вывод, роняет сборку; README.source.js не
подставляется никогда и может упоминать токены буквально.

**Правило разбиения (точные числа).** Пусть `L` — максимум числа строк
по трём языковым телам юнита.

- Если `L <= 40`, то `N = 1` (один `body-1.md`).
- Если `L > 40`, то `N = ceil(L / 30)`.

Каждый язык разбивается **независимо** на N кусков, разрезами только по
границам пустых строк (пустая строка — никогда посреди строки), причём
N-1 точек разреза выбираются как пустые строки, ближайшие к
пропорциональным целевым смещениям `i*L/N` для `i = 1..N-1`; при равном расстоянии
выбирается более ранняя граница пустой строки. Если у
языка не хватает различных внутренних пустых строк для N-1 точек
разреза, N для **всего юнита** уменьшается до (доступных точек
разреза + 1), а не падает с ошибкой. Семантическое выравнивание кусков
между языками **не** является целью — это только гигиена размера
файлов.

## Файлы тела (критично для точности байт-в-байт)

Тело юнита на каждом языке — конкатенация строковых значений
`body-1.md` .. `body-N.md` по порядку, **без вставленного разделителя
между кусками**. Генератор не вставляет ничего и между юнитами, поэтому
пустая строка-разделитель живёт в КОНЦЕ **последнего куска юнита**:

- Каждый юнит **кроме последнего** заканчивается ровно ОДНОЙ пустой
  строкой, то есть строка последнего куска заканчивается `"\n\n"`.
- **Последний юнит в порядке манифеста** заканчивается одним финальным
  переводом строки без завершающей пустой строки (`"\n"`) — последними
  байтами своего последнего куска.
- Тело frontmatter заканчивается одной пустой строкой перед первым
  заголовком секции.

Когда юнит разбит на несколько кусков, эти завершающие байты просто
живут в конце ПОСЛЕДНЕГО куска — более ранние куски не несут своего
особого завершающего пробела сверх того, что дало разбиение.

Ошибиться здесь — способ №1 уронить `--check`.

## `manifest.js`

Явный **упорядоченный** массив из 103 имён папок в настоящем порядке
документа. Он начинается `["frontmatter", "named-abstract", "sec-1",
...]` и заканчивается `[..., "named-appendix-d"]`. Он **никогда не
сортируется по алфавиту**: `"sec-10.7"` должен идти после `"sec-2"`, а
именованные секции стоят на своих реальных позициях в документе. Независимый
lock `scripts/locks/section-inventory.0.7.lock.json` хранит по одной
детерминированной записи на элемент manifest в его порядке. Каждая запись имеет
ровно поля `{ unit, kind, number, level, sep }`; отсутствующие структурные
значения равны `null`. Значения `kind`, `number`, `level` и `sep`
MUST совпадать с соответствующими полями `meta.js`. Заголовки и текст тела
остаются редактируемыми и lock-ом не защищаются. При намеренном добавлении или
удалении секции оба файла MUST обновляться вместе; изменения только manifest
или иерархических meta-полей отвергаются.

### `release.js`

`release.js` содержит ровно `{ version, released }`, именно в этом
порядке ключей: текущую версию спецификации и дату её релиза. Как и
`meta.js`, файл должен быть байт-в-байт идентичен `export default ` +
`JSON.stringify(value, null, 2)` + один перевод строки; любая иная
сериализация отвергается. Это единственное место, где записаны версия и
дата; они питают:

- строки `**Version:**` / `**Date:**` юнита frontmatter — через
  подстановку токенов `@@VERSION@@` / `@@DATE@@`, описанную выше;
- проверку section-inventory lock: Builder сверяет `version` lock-а с ним;
- `node scripts/build_spec.mjs` (write и `--check`) также
  проверяет, что `versions.ktav` и три корневых README ссылаются на
  текущие версию и дату в точности как объявляет `release.js`; любое
  расхождение валит сборку, называя каждый расходящийся файл.

## Исходный объект README

`README.source.js` — единый source object `{ en, ru, zh }` для трёх README в
этой директории. Builder статически проверяет его и генерирует из него
`README.md`, `README.ru.md` и `README.zh.md`; ручное изменение любого README
делает `--check` ошибочным.

## Контракт безопасности Markdown

Текст тела юнита MUST NOT содержать открывающую строку HTML-блока вне
подтверждённого fenced code block. Это закрытое правило охватывает все семь
форм HTML-блоков CommonMark: теги `script/pre/style/textarea`, комментарии,
processing instructions, декларации, секции CDATA, список блочных тегов и
прочие полные открывающие или закрывающие теги. Тип 7 применяется только когда
строка целиком состоит из корректного открывающего или закрывающего тега и
необязательных пробельных символов; autolink, некорректный текст, похожий на
тег, и проза со встроенными тегами этим правилом не запрещены. HTML-подобный
текст внутри подтверждённого fenced code block по-прежнему разрешён.

## Как генератор собирает файл

`scripts/build_spec.mjs` идёт по манифесту по порядку. Для каждого
юнита он читает `manifest.js`/`meta.js` как строгий UTF-8-текст и разбирает payload
после `export default ` через `JSON.parse`, затем статически сканирует и
декодирует `body-1.md` .. `body-N.md` **по порядку** (код под `content/`
никогда не исполняется), затем:

- для `frontmatter`: вывести конкатенацию строк `en` / `ru` / `zh` из
  `body-1` .. `body-N`, дословно;
- для любого другого юнита: вывести
  `'#'.repeat(level) + ' ' + (numbered ? number + sep : '') + title[lang] + '\n'`,
  затем конкатенацию строк тела;
- конкатенировать.

Команды:

```sh
node scripts/build_spec.mjs          # writes the 3 spec .md files and 3 content READMEs
node scripts/build_spec.mjs --check  # verifies byte-identity, writes nothing
node --test scripts/test_build_spec.mjs  # adversarial builder test suite (negative paths)
```

`--check` проверяет inventory lock, регенерирует все шесть файлов в памяти и
побайтово сравнивает их с закоммиченными: три файла спецификации и три content
README. При успехе: код выхода 0 и **полная тишина**. При
расхождении: код выхода 1 с диагностикой, называющей юнит, язык и
строку первого различающегося байта. Ничего не пишет. В режиме записи сборщик
сначала подготавливает все шесть временных файлов и восстанавливаемые backup.
Журнал транзакции представляет собой один атомарно заменяемый и fsync-нутый
снимок: он содержит только проверенный nonce, digest-ы, индексы фаз и шесть
известных идентификаторов выходных файлов; все пути временных файлов и backup
выводятся самим сборщиком. До durable commit marker восстановление возвращает
точные старые байты; после него сохраняет точные новые байты и только
заканчивает очистку. Живой кооперативный lock отклоняет второго писателя.
В Linux и Windows владелец получает инкарнацию тем же наблюдаемым способом
старта процесса, который используют reclaimers; если источник недоступен,
записывается непроверенная инкарнация, и живой PID никогда не отбирается.
Истечение lease само по себе никогда не отбирает lock у живой совпадающей
инкарнации: reclaim разрешён только после доказанной смерти процесса или
доказанно другой инкарнации. Reclaim сначала атомарно публикует свежий claim
владельца, затем захватывает устаревший target и удаляет только артефакты
точной старой инкарнации. При release alias захватывается owner-specific claim;
замена сначала восстанавливается, и только потом удаляются артефакты владельца.
Старые фиксированные candidate, claim и lease очищаются только после строгой
проверки владельца; `--check` только сообщает о них. Если есть journal, lock
или служебный файл незавершённой транзакции, `--check`
сообщает об этом и не выполняет recovery или очистку. На некоторых платформах
(особенно Windows) fsync каталога недоступен, поэтому сборщик явно сообщает
режим file-only crash durability и не выдаёт его за защиту от потери питания.

`node --test scripts/test_build_spec.mjs` запускает adversarial-набор
тестов сборщика (негативные сценарии): он скармливает валидатору
специально искажённые деревья контента и проверяет, что каждое
closed-world-свойство, задокументированное в этом README, отвергается.

Рекомендуемый рабочий процесс: правите файлы юнитов -> запускаете
`node scripts/build_spec.mjs` -> проверяете по `git diff`, что изменения
трёх файлов `.md` — ровно то, что вы имели в виду -> запускаете
`python scripts/check_translation_parity.py versions/0.7/spec.md versions/0.7/spec.ru.md versions/0.7/spec.zh.md` -> коммитите изменения юнитов и
регенерированные файлы `.md` **вместе**.

## Как добавить новую секцию

Пример (вымышленный): добавляем секцию в стиле верхнего уровня
`## 9.9 Widget Frobnication` с подсекцией `### 9.9.1 Widget Modes` с
разделителями только из пробела.

Шаги:

1. Создайте папки, `meta.js` (с `"bodyParts": 1`) и `body-1.md` на
   каждый юнит (помните правило завершающей пустой строки выше).
2. Вставьте оба имени папок в `manifest.js` и массив `units` inventory lock
   на правильные позиции документа (после юнита, предшествующего секции 9.9).
3. Запустите `node scripts/build_spec.mjs`, посмотрите `git diff`,
   прогоните проверку паритета, затем коммитьте юниты и регенерированные
   файлы `.md` вместе.

`sec-9.9/meta.js`:

```js
export default {
  "kind": "numbered",
  "number": "9.9",
  "sep": " ",
  "level": 2,
  "title": {
    "en": "Widget Frobnication",
    "ru": "...",
    "zh": "..."
  },
  "bodyParts": 1
}
```

Примечание: `sep` зависит от текста заголовка, который пишет автор. Для
заголовка с точкой `## 9.9. Widget Frobnication` это было бы `". "`;
для `## 9.9 Widget Frobnication` — `" "`. Записывайте то, что вы
действительно написали, и будьте последовательны. Для подсекции
`### 9.9.1 Widget Modes` файл `sec-9.9.1/meta.js` той же формы, но с
`"number": "9.9.1"`, `"level": 3`.

`sec-9.9/body-1.md` (вымышленное содержимое-заполнитель) с пометками,
где действуют правила завершающего перевода строки:

```js
// sec-9.9/body-1.md  (last unit in manifest order? then en must end "\n", else "\n\n")
export default {
  en: `Frobnicate the widget.

(body of 9.9)
`,
  ru: `...`,
  zh: `...`,
};
```

Завершающая пустая строка перед заголовком следующего юнита — это
ПОСЛЕДНИЕ байты ПОСЛЕДНЕГО куска юнита (здесь `body-1.md`, поскольку
`"bodyParts": 1`): строка `en` выше заканчивается `"\n\n"` (ровно одна
пустая строка), если только 9.9 не последний юнит в порядке манифеста —
тогда она заканчивается одним `"\n"`. Более ранние куски (в юните из
нескольких кусков) таких завершающих байтов не несут.

## История / бутстрап

Эта структура была создана одноразовой механической миграцией,
записанной в `scripts/archive/extract_content_units.py`: она нарезала
три тогдашних файла `.md` на юниты побайтовым нарезанием по диапазонам
строк (никакой текст не перенабирался) и проверила байт-в-байт
идентичную реконструкцию. Позднее скрипт был расширен, чтобы выдавать
сразу текущую схему `body-*.md` — `meta.js` с `bodyParts` плюс
`body-1..N` на юнит. Скрипт сохранён только для происхождения, не как
штатный инструмент: он отказывается перезаписывать существующий
`content/` и не имеет флага переопределения. Пересборка с нуля означает
ручное удаление `content/` первым, отдельным осознанным действием.
**Текущий** рабочий процесс — обратное направление: правите юниты, и
`build_spec.mjs` регенерирует файлы `.md`.

## Вне охвата

CI уже запускает `node scripts/build_spec.mjs --check` и
`node --test scripts/test_build_spec.mjs` в `.github/workflows` на каждый
push/PR.
